<resources>
    <string name="text_temperature" translatable="false">%1d°C</string>
    <string name="text_humidity" translatable="false">%1d°C</string>
    <string name="app_name">Smart Humidifier</string>
    <string name="text_user_not_logged">You are not logged in user</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Register</string>
    <string name="input_layout_user_email">Email</string>
    <string name="input_layout_user_password">User password</string>
    <string name="input_layout_confirm_password">Confirm password</string>
    <string name="image_view_user_profile">User profile picture</string>
    <string name="button_login">Sign In</string>
    <string name="button_reset_password">Forgot password?</string>
    <string name="button_home">Home</string>
    <string name="button_work_parameters">Work Parameters</string>
    <string name="button_settings">Settings</string>
    <string name="button_edit_email">Edit email</string>
    <string name="button_edit_password">Edit password</string>
    <string name="button_logout">Logout</string>
    <string name="button_delete_user">Delete</string>
    <string name="button_user_profile">Profile</string>
    <string name="button_back">Back</string>
    <string name="button_create_user">Create user</string>
    <string name="text_update_email">Update email</string>
    <string name="text_update_password">Update password</string>
    <string name="button_update_user">Update user</string>
    <string name="input_layout_wifi_network">WiFi network</string>
    <string name="input_layout_wifi_password">WiFi password</string>
    <string name="input_layout_timezone">Timezone</string>
    <string name="button_send_work_parameters">Send parameters</string>
    <string name="text_work_parameters">ESP8266 Settings</string>
    <string name="tab_item_temperature_mode">Humidity mode</string>
    <string name="tab_item_time_mode">Time mode</string>
    <string name="view_pager">Main screen</string>
    <string name="input_layout_temperature">Maintained humidity</string>
    <string name="button_start_mode">Start mode</string>
    <string name="button_stop_mode">Stop mode</string>
    <string name="card_view_temperature_range">Min humidity: %1d%%\nMax humidity: %2d%%</string>
    <string name="button_add_time">Add</string>
    <string name="button_start_heater">Start humidifier</string>
    <string name="button_stop_heater">Stop humidifier</string>
    <string name="select_vibration_type">Choose vibration type</string>
    <string name="show_notification_with_temperature_title">Show notification</string>
    <string name="show_notification_with_temperature_summary">Persistent notification with temperature and humidity</string>
    <string name="enable_heater_state_notifications_title">Other notifications</string>
    <string name="enable_heater_state_notifications_summary">Humidifier On/Off Notifications</string>
    <string name="button_default_settings">Default settings</string>
    <string name="temperature_notification_title">Smart Humidifier</string>
    <string name="temperature_notification_text">Temperature: %1d°C</string>
    <string name="heater_started">Humidifier started</string>
    <string name="heater_stopped">Humidifier stopped</string>
    <string name="toolbar_main_activity">Home</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_user_profile">Profile</string>
    <string name="reducing_the_min_temperature_title">Minimum humidity</string>
    <string name="reducing_the_min_temperature_summary">Decrease in the minimum humidity relative to the set</string>
    <string name="increasing_the_max_temperature_title">Maximum humidity</string>
    <string name="increasing_the_max_temperature_summary">Increasing the maximum humidity relative to the set</string>
    <string name="other_settings_title">Other settings</string>
    <string name="temperature_mode_title">Humidity mode</string>
    <string name="notifications_title">Notifications</string>
    <string name="input_layout_temperature_interval">Sensor interval</string>
    <string name="normal_vibration">Normal vibration</string>
    <string name="haptic_feedback">Haptic feedback</string>
</resources>