<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabBackground="@color/primary_color"
            app:tabIconTint="@color/tab_icon_color"
            app:tabIndicatorColor="@color/dark_color"
            app:tabSelectedTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_temperature"
                android:text="@string/tab_item_temperature_mode" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_time"
                android:text="@string/tab_item_time_mode" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:contentDescription="@string/view_pager"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutWave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layoutSecondWave"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/second_wave_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1.35f"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <RelativeLayout
            android:id="@+id/layoutFirstWave"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/wave_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1.6f"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUserNotLogged"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp">

        <ImageView
            android:id="@+id/imageMainUserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_view_user_profile"
            app:layout_constraintBottom_toTopOf="@+id/textUserNotLogged"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user_profile" />

        <TextView
            android:id="@+id/textUserNotLogged"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal|top"
            android:maxLines="2"
            android:text="@string/text_user_not_logged"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="0.5sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="2.9f"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageMainUserProfile"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutSignInUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0.4"
            android:background="@drawable/button_background_style"
            android:maxLines="1"
            android:text="@string/button_sign_in"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="0.5sp"
            app:autoSizeTextType="uniform"
            app:backgroundTint="#FFFFFF"
            app:backgroundTintMode="multiply"
            app:icon="@drawable/ic_login"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0.6"
            android:background="@drawable/button_background_style"
            android:maxLines="1"
            android:text="@string/button_sign_up"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="0.5sp"
            app:autoSizeTextType="uniform"
            app:backgroundTint="#FFFFFF"
            app:backgroundTintMode="multiply"
            app:icon="@drawable/ic_register"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>